--- a/keymaerax-webui/src/main/resources/css/presentation.css
+++ b/keymaerax-webui/src/main/resources/css/presentation.css
@@ -682,13 +682,16 @@ del {
   padding: 4px 4px 4px 4px;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
-  display: table-cell;
+  display: block;
   font-size: 24px;
 }
 .k4-formula .k4-formula-content-abbreviate {
   padding: 4px 4px 4px 4px;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
+}
+.k4-formula-container {
+  max-width: 90%;
 }
 
 /*
