--- a/keymaerax-webui/src/main/resources/css/presentation_small.css
+++ b/keymaerax-webui/src/main/resources/css/presentation_small.css
@@ -681,13 +681,16 @@ del {
   padding: 4px 4px 4px 4px;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
-  display: table-cell;
+  display: block;
   font-size: 22px;
 }
 .k4-formula .k4-formula-content-abbreviate {
   padding: 4px 4px 4px 4px;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
+}
+.k4-formula-container {
+  max-width: 90%;
 }
 
 /*
